--- a/hw0/homework0.tex
+++ b/hw0/homework0.tex
@@ -13,6 +13,9 @@
 \course{CS181-s23}
 \assignment{Homework \#0}
 \duedate{January 26, 2023 at 11:59 PM\\ (with free, no-questions-asked extension, see below)}
+\name{Aidan Tai}
+\email{aidantai@college.harvard.edu}
+\collaborators{None}
 
 \usepackage{comment}
 \usepackage{url}
