--- a/hw0/homework0.tex
+++ b/hw0/homework0.tex
@@ -206,8 +206,8 @@ $$y = f(x_1, x_2) = \exp\left(-(x_1 - 2)^2 - (x_2 - 1)^2 \right)$$
     \setcounter{enumi}{2}
     \item Left: height-water graph, Right: height-water,sunlight surface\\
     The visualization on the right clearly shows a unique maximum in the domain space.\\
-    \includegraphics[width=0.45\linewidth]{P2Plant.png}
-    \includegraphics[width=0.45\linewidth]{P2Sunlight.png}
+    \includegraphics[width=0.45\linewidth]{./images/P2Plant.png}
+    \includegraphics[width=0.45\linewidth]{./images/P2Sunlight.png}
 
 \end{enumerate}
 \end{solution}
@@ -253,10 +253,10 @@ For this problem, you may find the \texttt{multivariate\_normal} module from \te
 \begin{enumerate}
     \item
     \begin{enumerate}
-        \item \includegraphics[width=0.4\linewidth]{P3Packages.png}
+        \item \includegraphics[width=0.4\linewidth]{./images/P3Packages.png}
         \item The biggest bin is (119.5-120, 4-4.33). This is very close to the expected (120,4).
     \end{enumerate}
-    \item \includegraphics[width=0.4\linewidth]{P3PDF.png} It seems like S has a positive correlation with W.
+    \item \includegraphics[width=0.4\linewidth]{./images/P3PDF.png} It seems like S has a positive correlation with W.
     \item It could be appropriate because the Gaussian Distribution is often generalizable to many different datasets.
     However, the package size might be very distinct from a gaussian distribution, in which case the Gaussian is suboptimal.
     For example, it could be possible that USPS only owns three box sizes: 8, 120, and 100,000,000.
@@ -278,4 +278,10 @@ For this problem, you may find the \texttt{multivariate\_normal} module from \te
 \end{enumerate}
 \end{solution}
 
+\begin{figure}
+    \includegraphics[angle=270,width=\linewidth]{images/Problem 1 Algebra.jpeg}
+\end{figure}
+\begin{figure}
+    \includegraphics[angle=270,width=\linewidth]{images/Problems 2,3 Math.jpeg}
+\end{figure}
 \end{document}
