--- a/hw0/homework0.tex
+++ b/hw0/homework0.tex
@@ -1,4 +1,4 @@
-\documentclass{harvardml}
+\documentclass[submit]{harvardml}
 
 % Authors: Amir Shanehsazzadeh, Andrew Kim, Nari Johnson (Jan 2021)
 % Edited by: Max Guo, Raphael Pellegrin, Katherine Tian (Jan 2022)
