--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -3,6 +3,9 @@
 \course{CS181-S23}
 \assignment{Assignment \#1}
 \duedate{11:59pm ET, February 9, 2023} 
+\name{Aidan Tai}
+\email{aidantai@college.harvard.edu}
+\collaborators{None}
 
 \usepackage[OT1]{fontenc}
 \usepackage[colorlinks,citecolor=blue,urlcolor=blue]{hyperref}
